--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.0.0",
   "description": "",
   "main": "index.js",
-  "devDependencies": {
-    "coffee-script": "~1.7.1",
-    "noble": "~0.3.4"
+  "dependencies": {
+    "noble": "*",
+    "node-rest-client": "*",
+    "date-utils": "*"
   }
 }
